--- a/style.css
+++ b/style.css
@@ -452,7 +452,7 @@ footer{
     padding-top: 1em;
     padding-bottom: 1em;
 }
-@media (min-width: 1300px){
+@media (max-width: 1300px){
 	.menu-grid,.part-1,.news,.offer-grid{
 	opacity:1;}
 }
